--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   cached_network_image: ^2.0.0
   image_picker: ^0.6.2+3
   shared_preferences: ^0.5.6
+  http: ^0.12.0+4
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
